@@ -11,55 +11,73 @@ module Gluon::Test
     CVS_ID = '$Id$'
 
     def setup
-      @install_dir = 'setup_install_test_dir'
-      FileUtils.rm_rf(@install_dir) if $DEBUG
-      @setup = Gluon::Setup.new(@install_dir)
+      @install_dir = nil
       @saved_umask = File.umask
     end
 
     def teardown
       File.umask(@saved_umask)
-      FileUtils.rm_rf(@install_dir) unless $DEBUG
     end
 
-    def inst_path(*names)
-      File.join(@install_dir, *names)
+    def setup_test_dir(name)
+      @install_dir = File.join(File.dirname(__FILE__), File.basename(__FILE__, '.rb') + ".#{name}.install")
+      @setup = Gluon::Setup.new(@install_dir)
+      FileUtils.rm_rf(@install_dir)
+      FileUtils.mkdir(@install_dir)
     end
-    private :inst_path
+    private :setup_test_dir
 
-    def test_make_toip_dirs
+    def test_make_top_dirs
+      setup_test_dir('test_make_top_dirs')
       @setup.make_top_dirs
-      assert(File.directory? inst_path(Gluon::Setup::LIB_DIR))
-      assert(File.directory? inst_path(Gluon::Setup::VIEW_DIR))
-      assert(File.directory? inst_path(Gluon::Setup::SERVER_DIR))
-      assert(File.directory? inst_path(Gluon::Setup::CGI_DIR))
+      assert(File.directory? File.join(@install_dir, Gluon::Setup::BIN_DIR))
+      assert(File.directory? File.join(@install_dir, Gluon::Setup::CGI_DIR))
+      assert(File.directory? File.join(@install_dir, Gluon::Setup::LIB_DIR))
+      assert(File.directory? File.join(@install_dir, Gluon::Setup::VIEW_DIR))
     end
 
     def test_install_runtime
+      setup_test_dir('test_install_runtime')
       @setup.make_top_dirs
       @setup.install_runtime
 
-      assert(File.file? inst_path(Gluon::Setup::SERVER_DIR, 'webrick'))
-      assert(File.executable? inst_path(Gluon::Setup::SERVER_DIR, 'webrick'))
+      assert(File.file? File.join(@install_dir, Gluon::Setup::BIN_DIR, 'gluon_local'))
+      assert(File.executable? File.join(@install_dir, Gluon::Setup::BIN_DIR, 'gluon_local'))
 
-      assert(File.file? inst_path(Gluon::Setup::SERVER_DIR, 'mongrel'))
-      assert(File.executable? inst_path(Gluon::Setup::SERVER_DIR, 'mongrel'))
+      assert(File.file? File.join(@install_dir, Gluon::Setup::BIN_DIR, 'cgi_server'))
+      assert(File.executable? File.join(@install_dir, Gluon::Setup::BIN_DIR, 'cgi_server'))
 
-      assert(File.file? inst_path(Gluon::Setup::CGI_DIR, 'gluon.cgi'))
-      assert(File.executable? inst_path(Gluon::Setup::CGI_DIR, 'gluon.cgi'))
+      assert(File.file? File.join(@install_dir, Gluon::Setup::CGI_DIR, 'gluon.cgi'))
+      assert(File.executable? File.join(@install_dir, Gluon::Setup::CGI_DIR, 'gluon.cgi'))
 
-      assert(File.file? inst_path('Rakefile'))
-      assert(! (File.executable? inst_path('Rakefile')))
+      assert(File.file? File.join(@install_dir, Gluon::Setup::CGI_DIR, 'config.ru'))
+      assert(! (File.executable? File.join(@install_dir, Gluon::Setup::CGI_DIR, 'config.ru')))
+
+      assert(File.file? File.join(@install_dir, 'Rakefile'))
+      assert(! (File.executable? File.join(@install_dir, 'Rakefile')))
+
+      assert(File.file? File.join(@install_dir, 'config.ru'))
+      assert(! (File.executable? File.join(@install_dir, 'config.ru')))
+
+      assert(! (File.file? File.join(@install_dir, 'config.rb')),
+             'customizable configuration file should not exist.')
     end
 
     def test_install_example
+      setup_test_dir('test_install_example')
       @setup.make_top_dirs
       @setup.install_example
-      assert(File.file? inst_path(Gluon::Setup::LIB_DIR, 'Welcom.rb'))
-      assert(File.file? inst_path(Gluon::Setup::VIEW_DIR, 'Welcom.erb'))
-      assert(File.file? inst_path('config.rb'))
-      assert(FileUtils.cmp(File.join(Gluon::Setup::RUNTIME, 'config.rb'),
-                           inst_path('config.rb')))
+
+      assert(File.file? File.join(@install_dir, Gluon::Setup::LIB_DIR, 'Welcom.rb'))
+      assert(! (File.executable? File.join(@install_dir, Gluon::Setup::LIB_DIR, 'Welcom.rb')))
+
+      assert(File.file? File.join(@install_dir, Gluon::Setup::VIEW_DIR, 'Welcom.erb'))
+      assert(! (File.executable? File.join(@install_dir, Gluon::Setup::VIEW_DIR, 'Welcom.erb')))
+
+      assert(File.file? File.join(@install_dir, 'config.rb'))
+      assert(! (File.executable? File.join(@install_dir, 'config.rb')))
+      assert(FileUtils.cmp(File.join(Gluon::Setup::RUNTIME_DIR, 'config.rb'),
+                           File.join(@install_dir, 'config.rb')))
     end
 
     def test_config_parse
@@ -76,10 +94,9 @@ module Gluon::Test
                      [ :line,           "baz\n" ]
                    ],
                    Gluon::Setup.config_parse(config_text))
-                     
     end
 
-    def test_config_render
+    def test_config_comment_out_example
       config_alist = [
         [ :line,           "foo\n" ],
         [ :example_start , ":example:start\n" ],
@@ -95,10 +112,10 @@ module Gluon::Test
       config_expected << "baz\n"
 
       assert_equal(config_expected,
-                   Gluon::Setup.config_render(config_alist))
+                   Gluon::Setup.config_comment_out_example(config_alist))
     end
 
-    def test_config_parse_render
+    def test_config_parse_comment_out_example
       config_text =  "foo\n"
       config_text << ":example:start\n"
       config_text << "bar\n"
@@ -112,27 +129,34 @@ module Gluon::Test
       config_expected << "baz\n"
 
       assert_equal(config_expected,
-                   Gluon::Setup.config_render(
+                   Gluon::Setup.config_comment_out_example(
                      Gluon::Setup.config_parse(config_text)))
     end
 
     def test_install_config
+      setup_test_dir('test_install_config')
       @setup.make_top_dirs
       @setup.install_config
-      assert(File.file? inst_path('config.rb'))
-      assert(! (File.executable? inst_path('config.rb')))
-      assert(! FileUtils.cmp(File.join(Gluon::Setup::RUNTIME, 'config.rb'),
-                             inst_path('config.rb')))
+
+      assert(File.file? File.join(@install_dir, 'config.rb'))
+      assert(! (File.executable? File.join(@install_dir, 'config.rb')))
+      assert(! FileUtils.cmp(File.join(Gluon::Setup::RUNTIME_DIR, 'config.rb'),
+                             File.join(@install_dir, 'config.rb')))
     end
 
-    def test_install_config2
+    def test_install_config_not_overwrite
+      setup_test_dir('test_install_config_not_overwrite')
       @setup.make_top_dirs
-      FileUtils.touch(inst_path('config.rb'))
+      FileUtils.touch(File.join(@install_dir, 'config.rb'))
       @setup.install_config
-      assert(File.file? inst_path('config.rb.new'))
-      assert(! (File.executable? inst_path('config.rb.new')))
-      assert(! FileUtils.cmp(File.join(Gluon::Setup::RUNTIME, 'config.rb'),
-                             inst_path('config.rb.new')))
+
+      assert_equal(0, File.stat(File.join(@install_dir, 'config.rb')).size,
+                   'should not modified original config.rb')
+
+      assert(File.file? File.join(@install_dir, 'config.rb.new'))
+      assert(! (File.executable? File.join(@install_dir, 'config.rb.new')))
+      assert(! FileUtils.cmp(File.join(Gluon::Setup::RUNTIME_DIR, 'config.rb'),
+                             File.join(@install_dir, 'config.rb.new')))
     end
 
     def test_umask
